# ssa

./: Cargo.toml  README.md
.circleci/: config.yml
assets/: A.sol  B.sol  C.sol  D.sol  E.sol  Identifier.sol  Sample.sol  out.json
cfg/: Cargo.toml
cfg/src/: block.rs  flow.rs  graph.rs  lib.rs
cfg/tests/: block_statement.rs  do_while_statement.rs  if_statement.rs  setup.rs  while_statement.rs
control_flow/: Cargo.toml
control_flow/src/: graph.rs  lib.rs
control_flow/tests/: block_statement.rs  do_while_statement.rs  if_statement.rs  setup.rs  while_statement.rs
core/: Cargo.toml
core/src/: dict.rs  edge.rs  lib.rs  state.rs  vertex.rs
dfg/: Cargo.toml
dfg/src/: action.rs  assignment.rs  flow.rs  lib.rs  link.rs  utils.rs  variable.rs
dot/: Cargo.toml
dot/src/: dot.rs  lib.rs  vertex.rs
examples/: Cargo.toml
loader/: Cargo.toml
loader/src/: lib.rs  option.rs  solidity.rs
samples/: .gitignore  Cargo.toml
samples/src/: main.rs
src/: code_block.rs  control_flow.rs  dict.rs  flat.rs  flow.rs  graph.rs  lib.rs  main.rs  symbol.rs  vertex.rs  walker.rs
src/analyzer/: analyzer.rs  mod.rs
src/cfg/: block.rs  flow.rs  graph.rs  mod.rs  splitter.rs
src/components/: function_definition.rs  mod.rs  state.rs  state_variable_declaration.rs  state_variable_definition.rs
src/core/: access.rs  action.rs  assignment.rs  common.rs  comparison.rs  declaration.rs  dict.rs  index_access.rs  link.rs  (+8 more)
tests/: block_statement.rs  data_flow.rs  do_while_statement.rs  if_statement.rs  inheritance.rs  setup.rs  while_statement.rs
utils/: Cargo.toml
(+100 files in other folders)
